6031.	[bug]		Move the "final reference detached" log message
			from dns_zone unit to the DEBUG(1) log level.
			[GL #3707]

6030.	[bug]		Refactor the ADB to use a global LRU queue, store
			the ADB names and ADB entries directly in the hash
			tables instead of buckets, and properly clean the
			ADB names and entries when not in use. [GL #3239]
			[GL #3238] [GL #2615] [GL #2078] [GL #2437]
			[GL #3312] [GL #2441]

6029.	[cleanup]	Remove the unused external cache cleaning mechanism
			as RBTDB has its own internal cache cleaning
			mechanism and we don't support any other database
			implementations. [GL #3639]

6028.	[performance]	Build-time code generation of DNS RRtype switches
			is now much faster. [GL !7121]

6027.	[bug]		Fix assertion failure in isc_http API used by
			statschannel if the read callback would be called
			on HTTP request that has been already closed.
			[GL #3693]

6026.	[cleanup]	Deduplicate time unit conversion factors.
			[GL !7033]

6025.	[bug]		Copy TLS identifier when setting up primaries for
			catalog member zones. [GL #3638]

6024.	[func]		Deprecate 'auto-dnssec'. [GL #3667]

6023.	[func]		Remove dynamic update DNSSEC management feature.
			[GL #3686]

6022.	[performance]	The decompression implementation in dns_name_fromwire()
			is now smaller and faster. [GL #3655]

6021.	[bug]		Use the current domain name when checking answers from
			a dual-stack-server. [GL #3607]

6020.	[bug]		Ensure 'named-checkconf -z' respects the check-wildcard
			option when loading a zone.  [GL #1905]

6019.	[func]		Deprecate `coresize`, `datasize`, `files`, and
			`stacksize` named.conf options. [GL #3676]

6018.	[cleanup]	Remove the --with-tuning configure option.
			[GL #3664]

6017.	[bug]		The view's zone table was not locked when it should
			have been leading to race conditions when external
			extensions that manipulate the zone table where in
			use. [GL #3468]

6016.	[func]		Change NSEC3PARAM TTL to match the SOA MINIMUM.
			[GL #3570]
